starting to add first content

--- a/components/html_builder/pyproject.toml
+++ b/components/html_builder/pyproject.toml
@@ -9,6 +9,9 @@ python = "^3.8"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
+flake8 = "^3.9.0"
+mypy = "^0.812"
+bandit = "^1.7.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
