Testing new content; same as before; crashed

--- a/components/html_builder/Dockerfile
+++ b/components/html_builder/Dockerfile
@@ -1,6 +1,6 @@
 FROM python:3.8-slim-buster
-COPY app.py .
-CMD [ "python3", "app.py"]
+COPY html_builder.py .
+CMD [ "python3", "html_builder.py"]
 
 
 
