"Under construction" html + some support for testing

--- a/components/html_builder/pyproject.toml
+++ b/components/html_builder/pyproject.toml
@@ -6,6 +6,7 @@ authors = ["uigctaw <uigctaw@protonmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
+htmlclasses = "^0.2.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
