--- a/components/gb_map_builder/pyproject.toml
+++ b/components/gb_map_builder/pyproject.toml
@@ -1,18 +1,14 @@
 [tool.poetry]
-name = "python-docker"
+name = "gb_map_builder"
 version = "0.1.0"
 description = ""
 authors = ["uigctaw <uigctaw@protonmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.9"
-htmlclasses = "^0.3.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
-flake8 = "^3.9.0"
-mypy = "^0.812"
-bandit = "^1.7.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
