--- a/components/docker-stack.yaml
+++ b/components/docker-stack.yaml
@@ -2,7 +2,7 @@
 version: "3.7"
 services:
   backend:
-    image: uigctaw/metadata-social-nginx:test22
+    image: uigctaw/metadata-social-nginx:0.0.14
     deploy:
       mode: global
     volumes:
@@ -14,7 +14,7 @@ services:
     ports:
       - 443:443
   app:
-    image: uigctaw/metadata-social-html_builder:test22
+    image: uigctaw/metadata-social-html_builder:0.0.14
     deploy:
       mode: global
     volumes:
